<resources>
    <string name="app_name">Status Saver FW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_pref">Developed by RealInventor</string>

    <!--IntroActivity -->
    <string name="permission_title">Need Storage Permission</string>
    <string name="permission_summary">This app needs read &amp; write permission to access files in your system.</string>
    <string name="permission_grant">Grant</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_try_again">Please provide the required privileges and try again!</string>

    <string name="try_again">Try again!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="whatsapp_fold_not_exist">It looks like you don\'t have a Whatsapp Status folder in your system!</string>
    <string name="fold_not_found">Could not find Status folder!</string>
    <string name="gbwhatsapp_stat">We could not find the folder that contains your Status media. This can happen if you don\'t have Whatsapp installed or if you are using GBWhatsapp. Are you using GBWhatsapp?</string>
    <string name="no_whatsapp">I don\'t have Whatsapp</string>
    <string name="app_cannot_work">This application cannot work unless you have Whatsapp installed!</string>


    <!--View Activity -->
    <string name="exiting_app">Exiting Application!</string>
    <string name="are_you_sure_exit">Are you sure you want to close this application?</string>


    <!-- Settings Pref Activity-->
    <string name="settings">Settings</string>
    <string name="unsuccessful">Unsuccessful!</string>
    <string name="u_freed_data">Congrats! You have freed %1$s MB of data</string>
    <string name="no_expired_files">There are no expired files to delete!</string>
    <string name="thank_you">Thank You!</string>
    <string name="sorry_some_error">Sorry, some error occured.</string>
    <string name="choose_email_client">Choose Email client</string>
    <string name="video_not_loaded">Ad video not yet loaded</string>


    <!-- Fragments -->
    <string name="refreshed">Refreshed!</string>
    <string name="file_saved">File saved!</string>
    <string name="add_to_fav">Add this to favourites?</string>
    <string name="added_to_fav">Added to favourites</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="prepare_for_share">Preparing file for sharing..</string>
    <string name="delete">Delete</string>
    <string name="alert">Alert!</string>
    <string name="are_u_sure_del">Are you sure, you want to delete?</string>
    <string name="deleted_file">Deleted the file..</string>
    <string name="could_not_delete">Could not delete..</string>
    <string name="remove_from_fav">Remove this from favourites?</string>
    <string name="removed_from_fav">Removed from favourites</string>
    <string name="remove">Remove</string>


    <string name="continue_to">Continue</string>


    <!--Settings -->
    <string name="general">General</string>
    <string name="clean_up">Clean up your Whatsapp Status folder, removing expired files</string>
    <string name="free_up">Free up some space?</string>
    <string name="click_here_to_clean">Click here to clean</string>
    <string name="version">Version</string>
    <string name="feedback_summary">Report technical issues or suggest new features.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_app_summary">Enjoying the app? Rate the app best!</string>
    <string name="rate_app">Rate the app</string>
    <string name="watch_ad_summary">Watch a video ad if you got some time.</string>
    <string name="watch_ad_title">Feeling bored? Or happy?</string>
    <string name="about">About</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_summary">Click here to learn about app\'s privacy policy!</string>

    <string name="permission_body">Status Saver would like to have your permission to access files to display them for you. Please grant the Storage permission!</string>
    <string name="permission_msg">You can\'t proceed without storage permission! </string>
    <string name="selection_msg">Select the WhatsApp version you are using from the options below. If you don\'t know this, just skip this step.
        If nothing appears in the app, consider changing the option from Settings.</string>

    <string name="whats_sel_title">Select WhatsApp version</string>
    <string name="whats_sel_summary">Select WhatsApp version you are using, of which the status files are to be shown.</string>
</resources>
